sample/asm/errors/msg_arity_mismatch.asm
.function: main/1
    frame ^[(pamv 0 (istore 1 0))]
    msg 3 add/2

    izero 0
    return
.end
